@@ -6479,14 +6479,6 @@
             <text>Select a Skill/Skill Group</text>
         </string>
         <string>
-            <key>Checkbox_Options_MayBuyQualities</key>
-            <text>May buy Qualities (RC 40)</text>
-        </string>
-        <string>
-            <key>Checkbox_Options_ContactPoints</key>
-            <text>Contact points instead of fixed Contacts (RC 40)</text>
-        </string>
-        <string>
             <key>Checkbox_Options_UseLogging</key>
             <text>Use Debug Logging</text>
         </string>
@@ -8039,14 +8031,6 @@
         <string>
             <key>Label_LifestyleNuyen_ResultOf</key>
             <text>Result of {0}D6: (</text>
-        </string>
-        <string>
-            <key>Checkbox_Options_KnowledgeMultiplier</key>
-            <text>Override Knowledge Points (INT + LOG) Multiplier</text>
-        </string>
-        <string>
-            <key>Checkbox_Options_ContactMultiplier</key>
-            <text>Override Contact Points Charisma Multiplier</text>
         </string>
         <string>
             <key>Checkbox_Options_Live_CustomData</key>
