@@ -5804,22 +5804,6 @@
       <text>Membros para Personagens Padrão:</text>
     </string>
     <string>
-      <key>Checkbox_Options_MayBuyQualities</key>
-      <text>Pode comprar Qualidades (RC 40)</text>
-    </string>
-    <string>
-      <key>Checkbox_Options_KnowledgeMultiplier</key>
-      <text>Pontos de Conhecimento gratuitos igual a (INT+LOG)</text>
-    </string>
-    <string>
-      <key>Checkbox_Options_ContactMultiplier</key>
-      <text>Pontos de Contato gratuitos igual a Carisma</text>
-    </string>
-    <string>
-      <key>Checkbox_Options_ContactPoints</key>
-      <text>Pontos de contato em vez de Contatos fixos (RC 40)</text>
-    </string>
-    <string>
       <key>Checkbox_Options_AutomaticUpdates</key>
       <text>Atualizações Automáticas</text>
     </string>
